# hamming-wasm

./: Cargo.toml  LICENSE  Makefile  README.md  style.css  wasm.js  wasm_bg.wasm
.github/workflows/: deploy.yml
src/: app.rs  config.rs  lib.rs  rendering_mode.rs
src/components/: bit_renderer.rs  mod.rs
src/types/: bit.rs  mod.rs  rendering_mode.rs
static/: index.html  package.json  style.css
