[package]
name = "hamming-wasm"
version = "0.1.0"
authors = ["Tiemen Waterreus <tiemen@tiemenwaterreus.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.17"
wasm-bindgen = "0.2.67"
web-sys = "0.3.46"
getrandom = { version = "0.2", features = ["js"] }
rand = { version = "0.8", features = ["getrandom"]}
hamming = { git = "https://github.com/Tmw/hamming-rs.git" }
